--- a/NLayer_EF_SQLServer/FortBase/FortBase.API/appsettings.json
+++ b/NLayer_EF_SQLServer/FortBase/FortBase.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionString": {
-    "FortBaseDb": "Server=DESKTOP-9G1H6H8;Database=FortBase;Trusted_Connection=True;"
+    "FortBaseDb": "Server=Your-Server-Name[Your-Server-Name];Database=FortBaseDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
