Save and Retrieve User

--- a/API_RepositoryPattern/FortBase/FortBase/appsettings.json
+++ b/API_RepositoryPattern/FortBase/FortBase/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionString": {
+    "FortBaseDb": "Server=DESKTOP-9G1H6H8;Database=FortBaseEF;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
