--- a/API_RepositoryPattern/FortBase/FortBase.Repository.Contracts/FortBase.Repository.Contracts.csproj
+++ b/API_RepositoryPattern/FortBase/FortBase.Repository.Contracts/FortBase.Repository.Contracts.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FortBase.Repository.Models\FortBase.Repository.Models.csproj" />
+  </ItemGroup>
 
 </Project>
