--- a/API_RepositoryPattern/FortBase/FortBase.Service.Contracts/FortBase.Service.Contracts.csproj
+++ b/API_RepositoryPattern/FortBase/FortBase.Service.Contracts/FortBase.Service.Contracts.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FortBase.Common\FortBase.Common.csproj" />
+    <ProjectReference Include="..\FortBase.Service.Models\FortBase.Service.Models.csproj" />
+  </ItemGroup>
 
 </Project>
